virtualservice2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bar
spec:
  hosts:
  - svc3.internal.tld
  - svc4.internal.tld
  - svc5.internal.tld
